# CxBlueprint

./: .gitignore  CLAUDE.md  FLOW_BUILDER.md  cleanup_thoughts.md  download_flows.sh  pyproject.toml  readme.md  requirements-dev.txt  validate_all_flows.sh  validate_flow.sh
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  FLOW_BUILDER.md  MODEL_INSTRUCTIONS.md
docs/development/: claude-instructions.md
examples/: Loan_main_menu.py  Loan_mainmenu.py  README.md  advanced_patterns.py  burger_order_flow.py  comprehensive_layout_test.py  edge_case_test.py  goodbye_flow.py  hello_flow.py  loan_center_main_menu.py  menu_flow.py  simple_flow.py  student_loan_ivr.py  template_flows.py  transfer_demo.py
examples/code_examples/: Loan_main_menu.py  burger_order_flow.py  loan_center_main_menu.py  menu_flow.py  simple_flow.py  student_loan_ivr.py
examples/complete_terraform_example/: counter_flow.json  flow_generator.py
examples/complete_terraform_example/lambda/: counter.py
examples/complete_terraform_example/terraform/: main.tf  outputs.tf  simple_flow.json  test_flow.json
examples/old_examples/: template_flows.py  test_layout_debug.py
examples/src/output/: loan_center_main_menu.json
input/: customer_support_menu.json  example.json  sample_ab_test.json  sample_disconnect_flow.json  sample_lambda_integration.json  sample_note_for_screenpop.json  sample_queue_configurations_flow.json  sample_queue_customer.json  sample_recording_behavior.json  sample_secure_input_with_no_agent.json  simple_test_flow_v2.json
output/: Cx_customer_support_menu.json  Cx_example.json  Cx_sample_ab_test.json  Cx_sample_disconnect_flow.json  Cx_sample_inbound_flow__first_contact_experience_.json  Cx_sample_lambda_integration.json  Cx_sample_note_for_screenpop.json  Cx_sample_queue_configurations_flow.json  Cx_sample_queue_customer.json  Cx_sample_recording_behavior.json  Cx_sample_secure_input_with_no_agent.json  Cx_simple_test_flow_v2.json  test_manual.json
qa_tests/: qa_helpers.py  run_all_qa.py  test_ab_testing.py  test_attributes_and_compare.py  test_basic_ivr.py  test_business_hours_lambda.py  test_callback_flow.py  test_decompile_modify.py  test_lex_bot.py  test_nested_menus_retry.py  test_queue_transfer.py  test_recording_control.py  test_transfer_to_flow.py  test_zero_knowledge.py
src/: canvas_layout.py  contact_flow.py  decompiler.py  flow_analyzer.py  flow_builder.py  main.py
src/blocks/: __init__.py  base.py  check_hours_of_operation.py  check_metric_data.py  compare.py  create_callback_contact.py  create_task.py  disconnect_participant.py  distribute_by_percentage.py  end_flow_execution.py  get_participant_input.py  invoke_lambda_function.py  message_participant.py  message_participant_iteratively.py  serialization.py  transfer_contact_to_queue.py  transfer_to_flow.py  types.py  update_contact_attributes.py  update_contact_callback_number.py  update_contact_event_hooks.py  update_contact_recording_behavior.py  update_contact_routing_behavior.py  update_contact_target_queue.py  wait.py
src/blocks/contact_actions/: __init__.py  create_task.py  transfer_contact_to_queue.py  update_contact_attributes.py  update_contact_callback_number.py  update_contact_event_hooks.py  update_contact_recording_behavior.py  update_contact_routing_behavior.py  update_contact_target_queue.py
src/blocks/flow_control_actions/: check_hours_of_operation.py  check_metric_data.py  compare.py  distribute_by_percentage.py  end_flow_execution.py  transfer_to_flow.py  wait.py
src/blocks/interactions/: create_callback_contact.py  invoke_lambda_function.py
src/blocks/participant_actions/: connect_participant_with_lex_bot.py  disconnect_participant.py  get_participant_input.py  message_participant.py  show_view.py
src/cxblueprint/: __init__.py  canvas_layout.py  contact_flow.py  flow_analyzer.py  flow_builder.py  mcp_server.py
src/output/: advanced_flow_demo.json  burger.json  code_generated_burger.json  code_generated_menu.json  code_generated_simple.json  comprehensive_layout.json  debug_simple.json  debug_test_flow.json  demo_goodbye_flow.json  demo_hello_flow.json  edge_case_test.json  goodbye_flow.json  hello_flow.json  menu.json  minimal_burger.json  simple.json  simple_debug_reformatted.json  student_loan_ivr.json  template_goodbye_flow.json  template_hello_flow.json  test_simple.json  test_simple_v2.json
src/scripts/: download_flows.sh  validate_all_flows.sh  validate_flow.sh
terraform_example/: .gitignore  QUICKSTART.md  README.md  flow_generator.py
terraform_example/terraform/: variables.tf
tests/: conftest.py  test_canvas_layout.py  test_decompilation.py  test_flow_analyzer.py  test_flow_builder.py  test_mcp_server.py
(+26 files in other folders)
