[project]
name = "cxblueprint"
version = "0.1.0"
description = "Python DSL for Amazon Connect contact flow generation"
requires-python = ">=3.11"
dependencies = []
readme = "readme.md"
license = {text = "MIT"}
authors = [
    {name = "Nicholas Conn"}
]
keywords = ["amazon-connect", "ivr", "contact-flow", "terraform", "cdk"]

[project.urls]
Homepage = "https://github.com/Pronetx/CxBlueprint"
Documentation = "https://github.com/Pronetx/CxBlueprint/tree/main/docs"
Repository = "https://github.com/Pronetx/CxBlueprint"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, gradually increase strictness
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

# Ignore missing imports for third-party libraries we don't control
[[tool.mypy.overrides]]
module = "canvas_layout.*"
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra -q --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require AWS credentials",
]

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Ignore unused imports in __init__.py

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
]
